Dosage 2.5 (released xx.xx.2013)

Features:
- comics: Added EatLiver, ICanBarelyDraw, JimBenton, MarriedToTheSea, NatalieDee.
  Closes: GH bug #37

Fixes:
- comics: Fixed GoblinsComic, KevinAndKell and other comics.


Dosage 2.4 (released 24.6.2013)

Features:
- comics: Added LinuxComFridayFunnies and OnTheFasttrack.

Fixes:
- cmdline: The --continue option fetched only one image.
  Closes: GH bug #32


Dosage 2.3 (released 26.5.2013)

Features:
- scripts: Added script to create a CBZ archive for a given comic
  directory.

Fixes:
- comics: Fix LookingForGroup and other comics.
  Closes: GH bug #31


Dosage 2.2 (released 30.4.2013)

Features:
- comics: Added ARedTailsDream, Carciphona, Curtailed, GirlGenius,
  Lackadaisy, SabrinaOnline, TheDreamlandChronicles, TwoGuysAndGuy
  and Unsound. Patches by Dirk Reiners.
  Closes: GH bug #29
- comics: Comics which are not updated anymore can now be marked.
  Closes: GH bug #30

Changes:
- cmdline: Ignore trailing '/' at end of comic names. Useful
  when using shell completion to pick comics. Patch by Dirk Reiners.

Fixes:
- comics: Fix DorkTower, MadamAndEve and Saturday Morning Breakfast
  Cereal, and improve image filenames of CtrlAltDel.
  Patches by Dirk Reiners.


Dosage 2.1 (released 14.4.2013)

Features:
- comics: Add some comic descriptions from their webpages.

Fixes:
- cmdline: Fix output encoding errors on comic listing.
  Closes: GH bug #24


Dosage 2.0 (released 11.4.2013)

Features:
- comics: Added DamnLol, EverydayBlues, ExtraOrdinary,
  ForLackOfABetterComic, GoblinsComic, RealmOfAtland, Science,
  SnowFlakes, StuffNoOneToldMe, WebDesignerCOTW and ZenPencils.
- comics: Added the --vote option to vote for popular comics.

Changes:
- cmdline: Remove deprecated mainline script.

Fixes:
- install: Add install_requires to setup.py to fix pip install.
  Closes: GH bug #22
- comics: Fixed Curvy, DasLebenIstKeinPonyhof, ExtraLife, EyeOfRamalach,
  KatzenfutterGeleespritzer, Oglaf, Precocious, SnowFlame.