@@ -29,7 +29,7 @@ def add(name, shortname):
 #add('9ChickweedLane', '/thefunnies/ninechickweedlane/')
 #add('Agnes', '/thefunnies/agnes/')
 #add('AndyCapp', '/thefunnies/andycapp/')
-add('Archie', '/thefunnies/archie/')
+#add('Archie', '/thefunnies/archie/')
 add('ArcticCircle', '/thefunnies/arcticcircle/')
 #add('AskShagg', '/thefunnies/askshagg/')
 #add('BC', '/thefunnies/bc/')
@@ -91,7 +91,7 @@ add('Mutts', '/thefunnies/mutts/')
 #add('ReplyAll', '/thefunnies/replyall/')
 add('RhymeswithOrange', '/thefunnies/rhymeswithorange/')
 #add('Rubes', '/thefunnies/rubes/')
-add('Rugrats', '/thefunnies/rugrats/')
+#add('Rugrats', '/thefunnies/rugrats/')
 #add('ScaryGary', '/thefunnies/scarygary/')
 #add('SpeedBump', '/thefunnies/speedbump/')
 #add('StrangeBrew', '/thefunnies/strangebrew/')
