@@ -37,7 +37,7 @@ class NatalieDee(_BasicScraper):
     description = u"America's Favorite Cracker"
     url = 'http://www.nataliedee.com/'
     rurl = escape(url)
-    stripUrl = url + 'index.php?date=%s'
+    stripUrl = url + '%s'
     firstStripUrl = stripUrl % '022806'
     imageSearch = compile(tagre("img", "src", r'(%s\d+/[^"]+)' % rurl, before="overflow"))
     prevSearch = compile(tagre("a", "href", r'([^"]+)') + "&lt;&lt; Yesterday")
