@@ -92,7 +92,7 @@ class OnTheFasttrack(_BasicScraper):
 
 
 class OneQuestion(_BasicScraper):
-    url = 'http://onequestioncomic.com/'
+    url = 'http://www.onequestioncomic.com/'
     stripUrl = url + 'comic.php?strip_id=%s'
     firstStripUrl = stripUrl % '1'
     imageSearch = compile(tagre("img", "src", r'((?:\.\./)?istrip_files/strips/\d+\.\w{3,4})'))
@@ -123,8 +123,8 @@ class OurHomePlanet(_BasicScraper):
 class OverCompensating(_BasicScraper):
     description = u'OVERCOMPENSATING: The Journal Comic With a Seething Disdain for Reality.'
     url = 'http://www.overcompensating.com/'
-    stripUrl = url + 'posts/%s.html'
-    firstStripUrl = stripUrl % '20040929'
-    imageSearch = compile(r'<img src="(/comics/.+?)"')
-    prevSearch = compile(r'"><a href="(.+?)"[^>]+?>&nbsp;\<\- &nbsp;</a>')
-    help = 'Index format: yyyymmdd'
+    stripUrl = url + 'overcompensating/index.php?comic=%s'
+    firstStripUrl = stripUrl % '0'
+    imageSearch = compile(tagre("img", "src", r'(/overcompensating/comics/[^"]+)'))
+    prevSearch = compile(tagre("a", "href", r'(/overcompensating/index\.php\?comic=\d+)', after="go back"))
+    help = 'Index format: number'
