@@ -1,11 +1,12 @@
 Dosage 2.5 (released xx.xx.2013)
 
 Features:
-- comics: Added EatLiver, ICanBarelyDraw, JimBenton, MarriedToTheSea, NatalieDee.
+- comics: Added EatLiver, ICanBarelyDraw, JimBenton, MarriedToTheSea
+  and NatalieDee.
   Closes: GH bug #37
 
 Fixes:
-- comics: Fixed GoblinsComic, KevinAndKell and other comics.
+- comics: Fixed AxeCop, GoblinsComic, KevinAndKell and other comics.
 
 
 Dosage 2.4 (released 24.6.2013)
